# clicks-protocol

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH-CHECKLIST.md  LAUNCH-DAY-CHECKLIST.md  LAUNCH-PLAN-FINAL.md  LICENSE  PROJEKTSTAND.md  README-CN.md  README.md  REPO-TRANSFER-CHECKLIST.md  SECURITY.md  SESSION-LOG.md  STATUS.md  ado-test.py  auto-ado.sh  autoresearch-ado.jsonl  autoresearch-ado.sh  autoresearch-gas.jsonl  autoresearch.sh  base-ecosystem-form-answers.md  base-ecosystem-listing-submit-path.md  base-ecosystem-listing.md  demo.tape  demo.webm  glama.json  hardhat.config.ts  package-lock.json  package.json  program-gas.md  program.md  render-assets.py  seo-log.md  skills-lock.json  slither-report-v3.json
acp-service/: package-lock.json  package.json  run.sh  service.ts  test-buyer.ts
agent-treasury/: package.json
bots/: run-yield-reporter.sh  treasury-agent.ts  yield-reporter.ts
clawhub-skill/: SKILL.md
cli/: README.md  package-lock.json  package.json  tsconfig.json
config/: clicks-agents.json  seed-attestations.json  trusted-attestors.json
content/: README-new.md  about.md  live-proof-copy.md  treasury-lab-explainer.md  whitepaper-v1.md  x-content-strategy.md  x-profile-setup.md  x-week-1-posts.md  x402-treasury-gap.md  x402-yield-blogpost.md
contracts/: ClicksFeeV2.sol  ClicksReferral.sol  ClicksReputationMultiplierV1.sol  ClicksSplitterV3.sol  ClicksSplitterV4.sol  ClicksSplitterV5.sol  ClicksYieldRouter.sol
deployments/: base.json
docs/: basescan-verification.md  morpho-vaults-base.md  security-audit.md  security-exploit-tests.md  vault-routing-architecture.md
integrations/crewai/: README.md  clicks_crewai.py  clicks_tool.py  pyproject.toml
integrations/crewai/clicks_crewai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/langchain/: README.md  clicks_langchain.py  clicks_tool.py  pyproject.toml
integrations/langchain/clicks_langchain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
landing-v3/: README.md  tailwind.config.ts
logo-redesign/: render-variants.py
marketing/: CHANNELS.md  LAUNCH-PLAYBOOK.md  METRICS.md  PRODUCT-BRIEF.md  README.md  VOICE-GUIDE.md  awesome-x402-pr-instructions.md  developer-outreach-list.md  growth-log.md  launch-distribution-review-2026-03-21.md  outreach-templates.md  outreach-tracker.md  seo-log.md  social-media-log.md  top-10-frameworks-freigabe.md  trendshift-listing.md
mcp-http/: package.json  tsconfig.json  wrangler.toml
mcp-server/: Dockerfile  package-lock.json  package.json  server.json
(+376 files in other folders)
