[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clicks-langchain"
version = "0.2.0"
description = "Clicks Protocol yield management tools for LangChain agents on Base"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Clicks Protocol", email = "dev@clicksprotocol.xyz"},
]
keywords = ["langchain", "defi", "yield", "base", "usdc", "ai-agents", "clicks-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.1.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://clicksprotocol.xyz"
Repository = "https://github.com/clicks-protocol/clicks-langchain"
Documentation = "https://docs.clicksprotocol.xyz/integrations/langchain"

[tool.setuptools]
py-modules = ["clicks_langchain"]
